<resources>
    <string name="app_name">LAMA</string>
    <string name="app_description">LAMA: Bu uygulama heyelan verisi toplayarak, heyelanların
        yarattığı tehlikelerin boyutlarını değerlendirmek icin kullanılacaktır.</string>
    <string name="hacettepe_uni_text">HACETTEPE ÜNİVERSİTESİ</string>
    <string name="info_form_screen_title">HEYELAN BİLDİRİMİ</string>
    <string name="add_photo_screen_title">FOTOĞRAF EKLE</string>
    <string name="user_name_hint">Kullanıcı adı</string>
    <string name="name_hint">Ad</string>
    <string name="surname_hint">Soyad</string>
    <string name="injury_or_death_hint">Can kaybı ve/veya yaralı var mı?</string>
    <string name="event_location_hint">Olay yeri (örn. Çankaya/Ankara)</string>
    <string name="event_date_hint">Olay tarihi</string>
    <string name="event_time_hint">Olay zamanı</string>
    <string name="damage_description_hint">Hasar durumu</string>
    <string name="damage_description_info">Eğer varsa bina, yol, tarım arazisi vb. gibi yerlerin
        aldığı hasar durumunu yazabilirsiniz.</string>
    <string name="other_observations_hint">Ek gözlemler</string>
    <string name="other_observations_info">Ek olarak gözlemdiğiniz olayın oluş şekli, hızı,
        hareket eden kaya veya toprağın olup olmadığı vb. bilgilerini yazabilirsiniz.</string>
    <string name="input_not_valid_error_text">*Lütfen bu alan için geçerli bir değer giriniz.</string>
    <string name="date">Tarih</string>
    <string name="time">Saat</string>
    <string name="location">Konum : %1$s</string>
    <string name="button_text_continue">DEVAM</string>
    <string name="button_text_send">GÖNDER</string>
    <string name="button_text_ok">OK</string>
    <string name="general_yes">EVET</string>
    <string name="general_no">HAYIR</string>
    <string name="image_explanation">Lütfen yeni fotoğraf yüklemek için asağıdaki resime tıklayınız.</string>
    <string name="general_imei" translatable="false">IMEI : %1$s</string>
</resources>
