<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <!--User Name-->
    <com.example.buyukdemircioglug.landslidealert.view.LAMAEditText
        android:id="@+id/fragment_user_input_edit_text_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/user_name_hint"
        android:textAppearance="@style/LAMATextViewTheme" />

    <!--Name & Surname-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <com.example.buyukdemircioglug.landslidealert.view.LAMAEditText
            android:id="@+id/fragment_user_input_edit_text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/name_hint"
            android:textAppearance="@style/LAMATextViewTheme" />

        <com.example.buyukdemircioglug.landslidealert.view.LAMAEditText
            android:id="@+id/fragment_user_input_edit_text_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/surname_hint"
            android:textAppearance="@style/LAMATextViewTheme" />

    </LinearLayout>

    <!--Event Location-->
    <com.example.buyukdemircioglug.landslidealert.view.LAMAEditText
        android:id="@+id/fragment_user_input_edit_text_event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/event_location_hint"
        android:textAppearance="@style/LAMATextViewTheme" />

    <!--Event Time-->
    <com.example.buyukdemircioglug.landslidealert.view.LAMAEditText
        android:id="@+id/fragment_user_input_edit_text_event_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/event_time_hint"
        android:textAppearance="@style/LAMATextViewTheme" />

    <!--Damage Description-->
    <com.example.buyukdemircioglug.landslidealert.view.LAMAEditText
        android:id="@+id/fragment_user_input_edit_text_damage_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/damage_description_hint"
        android:textAppearance="@style/LAMATextViewTheme" />

    <!--Other Observations-->
    <com.example.buyukdemircioglug.landslidealert.view.LAMAEditText
        android:id="@+id/fragment_user_input_edit_text_other_observations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/other_observations_hint"
        android:textAppearance="@style/LAMATextViewTheme" />

    <com.example.buyukdemircioglug.landslidealert.view.LAMATextView
        android:id="@+id/fragment_user_input_text_view_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <com.example.buyukdemircioglug.landslidealert.view.LAMATextView
        android:id="@+id/fragment_user_input_text_view_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <com.example.buyukdemircioglug.landslidealert.view.LAMATextView
        android:id="@+id/fragment_user_input_text_view_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <com.example.buyukdemircioglug.landslidealert.view.LAMAButton
        android:id="@+id/fragment_user_input_button_continue"
        style="@style/LAMAButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text_continue" />

</LinearLayout>